ChangeLog

Name: William Lai
Date: 12-28-2013
Description: Made bitboard member variables private
    * src/chess/Board.java: Moved bitboard member variables (long) from StandardChessBoard and made them private, creating accessor and mutator functions necessary in the process
    * src/chess/ComputerPlayer.java: Updated to use new functions from Board
    * src/chess/Definitions.java: Updated to use new functions from Board
    * src/chess/StandardChessGame.java: Removed bitboard member variables (long) and moved to Board class; also updated to use new functions from Board

Name: Vincent Wong
Date: 12-24-2013
Description: Hacked together a button class, bundled Lucida Bright fonts
    * src/Fonts/*: Added the Lucida Bright family
    * src/chess/StandardChessGameGraphics.java: Added code that loads Lucida Bright fonts to ensure their availability. Also, added a drawGUI function
    * src/chess/StandardChessGame.java: Added GUI object
    * src/chess/StandardChessGameGUI.java: New class that will manage graphical user interfacing, including buttons and menu in the future
    * src/chess/EasyButton.java: Quick implementation of a simple button that has an associated position, size, image, and callback action
    * README.md: Switched readme for markdown

Name: William Lai
Date: 12-24-2013
Description: New option to choose color
    * src/chess/StandardChessGame.java: Added new option to allow player to choose color

Name: William Lai
Date: 12-24-2013
Description: Bug fix
    * src/chess/ComputerPlayer.java: In static evaluation, check for game-ending conditions again (since bitboards make those operations faster), which prevents a bug that allows AI to make moves that leave the king in check.
    * src/chess/StandardChessGame.java: Added main method so that project can be run as an application and exported as a runnable JAR file (in addition to being able to be run as an applet).

Name: William Lai
Date: 12-24-2013
Description: Bug fixes