@@ -1,5 +1,11 @@
 ChangeLog
 
+Name: Eric Du
+Date: 12-29-2013
+Description: Implemented the undo function
+    * src/chess/StandardChessBoard.java: Added a function to decrement turn count when undoing
+    * src/chess/StandardChessGame.java: Added a stack that stores each move in FEN and pops when necesssary to undo
+
 Name: William Lai
 Date: 12-28-2013
 Description: Made bitboard member variables private
